--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.alexzh:circleimageview:1.2.0'
+    compile 'com.github.kimkevin:cachepot:1.1.0'
 }
